--- a/Code/platformio.ini
+++ b/Code/platformio.ini
@@ -12,4 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = adafruit/MAX6675 library@^1.1.2
+lib_deps = 
+	adafruit/MAX6675 library@^1.1.2
+	adafruit/Adafruit GFX Library@^1.11.11
+	adafruit/Adafruit SSD1306@^2.5.13
